--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
           name: "Build app"
           command: npm run build
       - persist_to_workspace:
-          root: ~/repo
+          root: workspace
           paths:
             - dist
             - package.json
